Implemented RNN model and ignored /.vector_cache/

--- a/.gitignore
+++ b/.gitignore
@@ -207,4 +207,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# vecotr cache
+RNN/.vector_cache/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,jupyternotebooks,python
